[gd_scene load_steps=4 format=3 uid="uid://b8qod0cq5cdvk"]

[ext_resource type="PackedScene" uid="uid://ntwsvgp35vyg" path="res://scenes/world.tscn" id="1_5pmyt"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_7r4pn"]
[ext_resource type="Script" path="res://scenes/Control.gd" id="3_3r0db"]

[node name="Main" type="Node3D"]
script = ExtResource("1_7r4pn")

[node name="World" parent="." instance=ExtResource("1_5pmyt")]
unique_name_in_owner = true

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control2" type="Control" parent="Control2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="Control" type="Control" parent="Control2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
script = ExtResource("3_3r0db")

[node name="UI" type="CanvasLayer" parent="Control2/VBoxContainer/Control"]
unique_name_in_owner = true

[node name="LabelBananas" type="Label" parent="Control2/VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 531.0
offset_top = 31.0
offset_right = 621.0
offset_bottom = 99.0
theme_override_font_sizes/font_size = 49
text = "test"

[node name="Panel" type="Panel" parent="Control2/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="TabContainer" type="TabContainer" parent="Control2/VBoxContainer/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8

[node name="ClickerSection" type="HBoxContainer" parent="Control2/VBoxContainer/Control/Panel/TabContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BuffSection" type="HBoxContainer" parent="Control2/VBoxContainer/Control/Panel/TabContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
